--- a/src/main/resources/css/login.css
+++ b/src/main/resources/css/login.css
@@ -63,3 +63,7 @@ body {
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
+
+/*form b {*/
+/*    color: red;*/
+/*}*/
